# chat_holmes

./: .clangd  .gitignore  README.md  compile_commands.json  studentDB.db
.cache/clangd/index/: DeepSeekProvider.cpp.0F80F7CDF190061A.idx  DeepSeekProvider.h.07EE2E1D4B0F4432.idx  LLMManager.cpp.72C33AE5880F809A.idx  LLMManager.h.E7CA660DBD9C7147.idx  LLMProvider.h.CB76730A8BA27321.idx  OllamaLLMProvider.cpp.FF5E05AD65AA4E3D.idx  OllamaLLMProvider.h.4D2A989746EB195E.idx  SessionManager.cpp.546D7424FDBA0ACA.idx  SessionManager.h.DF0A35C6DAA793C2.idx  common.h.A81FEFA94D465687.idx  myLog.cpp.17F3ACD49B0E9A90.idx  myLog.h.0B41C9CD352D71C6.idx
.marscode/: deviceInfo.json
chatserver/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
chatserver/required/: main需求.txt  前端页面需求.txt
chatserver/www/: app.js  index.html  styles.css
sdk/: CMakeLists.txt
sdk/include/: ChatSDK.h  DataManager.h  DeepSeekProvider.h  LLMManager.h  LLMProvider.h  OllamaLLMProvider.h  SessionManager.h  common.h
sdk/include/util/: myLog.h
sdk/src/: ChatSDK.cpp  DataManager.cpp  DeepSeekProvider.cpp  LLMManager.cpp  OllamaLLMProvider.cpp  SessionManager.cpp
sdk/src/util/: myLog.cpp
test/: CMakeLists.txt  CMakeLists.txt.bak  testLLM.cpp
test/.cache/clangd/index/: testLLM.cpp.1B21AB3835E8FA0D.idx
test/testSQLite/: studentDB.db  testSqlite3  testSqlite3.cpp
